Fix fading z-index for preloader

--- a/resources/public/less/base.less
+++ b/resources/public/less/base.less
@@ -38,7 +38,8 @@ body {
 
 #preloader {
   opacity: 1;
-  transition: opacity .75s ease-in-out;
+  transition: opacity .75s ease-in-out,
+              z-index .76s ease-in-out;
   z-index: 999;
 
   &.fulfilled {
